# VerseGuy

./: .cargo_plugin_publish_auth_tests.expanded.rs  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  PR_DESCRIPTION.md  README.md  README.md.bak.1767637415,50534  SECURITY.md  TEIL-1-IMPLEMENTATION-REPORT.md  TEIL-2-IMPLEMENTATION-START.md  TODO.md  VERSEGUY_COMPLETE_IMPLEMENTATION_GUIDE (4).md  VERSEGUY_COMPLETE_IMPLEMENTATION_GUIDE.md  VERSEGUY_COPILOT_COMPLETE.md  VERSEGUY_ENTERPRISE_AUDIT.md  VERSEGUY_ENTERPRISE_GUIDE TEIL 1 - 12.md  VERSEGUY_ENTERPRISE_GUIDE TEIL 1 - 8 DETAILED.md  VERSEGUY_ENTERPRISE_GUIDE.md  VERSEGUY_ENTERPRISE_GUIDE_TEIL_1-8_DETAILED.md  VERSEGUY_MISSING_AND_IMPROVEMENTS.md  VERSE_GUY_V2_ULTIMATE_SPECIFICATION.md  VerseGuy.sln  clippy.toml  codecov.yml  default_4927605410109940160_0_17960.profraw  default_4927605410109940160_0_25700.profraw  deny.toml  deny.toml.disabled  otlp_capture_dump.json  rust-toolchain.toml  setup-complete-project-fixed.ps1  setup-complete-project.ps1  setup-complete-project.sh  tmp_part.sh  (+3 more)
containers/audit/: Cargo.toml
containers/audit/src/: lib.rs
containers/audit/tests/: audit_delete_tests.rs  audit_tests.rs
containers/auth/: Cargo.toml  README.md
containers/auth/examples/: oauth_example.rs
containers/auth/src/: lib.rs  local.rs  oauth.rs  oauth_types.rs  session.rs  types.rs
containers/auth/tests/: integration_e2e.rs  local_auth_more_tests.rs  local_auth_tests.rs  oauth_integration.rs  oauth_tests.rs
containers/compliance/: Cargo.toml
containers/compliance/src/: gdpr.rs  lib.rs  tos_validator.rs
containers/compliance/tests/: gdpr_tests.rs  tos_tests.rs
containers/p2p/: Cargo.toml  Dockerfile
containers/p2p/docs/: README.md
containers/p2p/src/: lib.rs  local.rs  network.rs
containers/p2p/tests/: gossipsub_integration.rs  mdns_discovery.rs  p2p_network_tests.rs
containers/storage/: Cargo.toml
containers/storage/src/: backup.rs  lib.rs  rocksdb.rs  schema.rs  secrets.rs
containers/storage/tests/: backup_tests.rs  rocksdb_tests.rs  secrets_tests.rs
core/: CMakeLists.txt
core/include/: Capabilities.h  EventBus.h  IPlugin.h  IPluginHost.h  PluginLoader.h
core/src/: Core.cpp  EventBus.cpp  PluginLoader.cpp  main.cpp
core/tests/: test_loader.cpp  test_plugin_verify.cpp  test_plugin_verify_call.cpp  test_wasm_runner.cpp
crates/api/: Cargo.toml  README.md  openapi.yaml
crates/api/src/: lib.rs  store.rs
crates/api/static/swagger-ui/: interactive.js  oauth-callback.html  swagger-ui-bundle.js  swagger-ui.css
crates/api/tests/: e2e_authorization_code_simulated.rs  e2e_oauth_redis.rs  openapi_and_ui.rs  openapi_oauth_ui.rs  openapi_security.rs  openapi_token_response.rs  openapi_ui_params.rs  ships.rs  sled_persistence.rs
crates/domain/application/: Cargo.toml
crates/domain/application/src/: command.rs  entity.rs  lib.rs  query.rs  repo.rs  service.rs
crates/domain/fleet/: Cargo.toml  README.md
crates/domain/fleet/src/: aggregate.rs  entity.rs  event.rs  lib.rs  repo.rs  service.rs  value_object.rs
crates/domain/operations/: Cargo.toml
crates/domain/operations/src/: entity.rs  lib.rs  repo.rs  service.rs  value_object.rs
crates/domain/organization/: Cargo.toml
crates/domain/organization/src/: aggregate.rs  entity.rs  event.rs  lib.rs  repo.rs  service.rs  value_object.rs
crates/domain/teil13/: Cargo.toml
crates/domain/teil13/src/: entity.rs  lib.rs  repo.rs  service.rs
crates/domain/teil13/tests/: basic_tests.rs
crates/infrastructure/audit/: Cargo.toml  Dockerfile  README.md
crates/infrastructure/audit/scripts/: build-retention-runner.sh
crates/infrastructure/audit/src/: lib.rs
crates/infrastructure/audit/tests/: retention_runner_integration.rs  retention_tests.rs
crates/infrastructure/auth/: Cargo.toml  README.md
crates/infrastructure/auth/src/: lib.rs
crates/infrastructure/auth/tests/: auth_integration.rs
crates/infrastructure/authorization/: Cargo.toml  README.md
crates/infrastructure/authorization/src/: lib.rs  policy.rs  rbac.rs  store.rs
crates/infrastructure/licensing/: Cargo.toml
crates/infrastructure/licensing/src/: lib.rs
crates/infrastructure/storage/: Cargo.toml
crates/infrastructure/storage/src/: cache.rs  config.rs  engine.rs  error.rs  key_store.rs  lib.rs  migration.rs  prelude.rs  repository.rs  (+2 more)
crates/migrations/: Cargo.toml
crates/migrations/src/: lib.rs  main.rs
crates/telemetry-e2e/: Cargo.toml  telemetry_e2e_metrics.json
crates/telemetry-e2e/tests/: e2e.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs  utils.rs
crates/tests/tests/: integration_fleet.rs  integration_operation.rs  integration_organization.rs
launcher/: CMakeLists.txt
launcher/src/: main.cpp
master-server/: Cargo.toml
master-server/migrations/: README.md
master-server/src/: admin_cli.rs  ed25519_compat.rs  keystore.rs  legal.rs  lib.rs  main.rs  manifest_tool.rs  observability.rs  plugins.rs  routes.rs  state.rs
master-server/tests/: admin_keystore_tests.rs  application_http_tests.rs  cli_parsing_tests.rs  e2e_publish_flow.rs  fleet_http_tests.rs  gdpr_delete_anomaly_tests.rs  gdpr_export_delete_tests.rs  integration_tests.rs  isolate_store_manifest.rs  keystore_tests.rs  legal_tests.rs  manifest_tool_tests.rs  operations_http_tests.rs  org_http_tests.rs  org_ops_tests.rs  plugin_publish_auth_tests.rs  plugin_publish_tos_tests.rs  plugin_registry_tests.rs  plugin_sign_verify_tests.rs  plugin_verify_http_tests.rs  server_run_tests.rs  tos_tests.rs
patches/libp2p-swarm/: Cargo.toml
patches/libp2p-swarm/src/: behaviour.rs  compat.rs  connection.rs  dial_opts_convert.rs  handler.rs  lib.rs  test.rs  upgrade.rs
patches/libp2p-tls/: Cargo.toml
patches/libp2p-tls/src/: certificate.rs  lib.rs
patches/libp2p-tls/tests/: generate_and_parse.rs  handshake.rs
patches/lru/: Cargo.toml
patches/lru/src/: lib.rs
plugins/adapters/scunpacked/: Cargo.toml
plugins/base/fleet/: Cargo.toml  manifest.toml
plugins/base/organization/: Cargo.toml  manifest.toml
(+296 files in other folders)
