[workspace]
members = [
    "containers/storage",
    "containers/auth",
    "containers/licensing",
    "containers/compliance",
    "containers/audit",
    "containers/wasm_sandbox",
    "containers/p2p",
    "master-server",
    "plugins/registry",
    "plugins/base/organization",
    "plugins/base/fleet",
    "plugins/base/operations",
    "plugins/pro",
    "plugins/adapters",
]
