[workspace]
resolver = "2"
members = [
    "containers/auth",
    "containers/storage",
    "containers/licensing",
    "containers/compliance",
    "containers/p2p",
    "containers/audit",
    "containers/wasm_sandbox",
    "master-server",
    "plugins/registry",
    "plugins/base/organization",
    "plugins/base/fleet",
    "plugins/base/operations",
    "plugins/pro",
    "plugins/adapters/rsi",
    "plugins/adapters/discord",
    "plugins/template",
    "tools/manifest-validator",
    "tools/sample_crate",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Matthias Eckel"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Database
rocksdb = "0.21"

# Auth
argon2 = "0.5"
jsonwebtoken = "9.2"

# Crypto
ed25519-dalek = "2.1"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
