[workspace]
resolver = "2"
members = [
    "containers/auth",
    "containers/storage",
    "containers/licensing",
    "containers/compliance",
    "containers/p2p",
    "containers/audit",
    "containers/wasm_sandbox",
    "master-server",
    "plugins/registry",
    "plugins/base/organization",
    "plugins/base/fleet",
    "plugins/base/operations",
    "plugins/pro",
    "plugins/adapters/rsi",
    "plugins/adapters/discord",
    "plugins/template",
    "tools/manifest-validator",
    "tools/sample_crate",
    "crates/shared/error",
    "crates/shared/test_utils",
    "crates/telemetry-e2e",
    "crates/infrastructure/storage",
    "crates/infrastructure/authorization",
    "crates/infrastructure/licensing",
    "crates/migrations",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Matthias Eckel"]
license = "MIT"
rust-version = "1.72"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Database
rocksdb = "0.21"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

# Authentication
argon2 = "0.5"
jsonwebtoken = "9.2"

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
aes-gcm = "0.10"
ring = "0.17.14"

# Networking
libp2p = { version = "0.53.2", features = ["tcp", "quic", "mdns", "kad", "gossipsub", "noise", "yamux"] }
libp2p-core = "0.42.0"
libp2p-swarm = "0.45.1"
libp2p-mdns = "0.46.0"
libp2p-gossipsub = "0.46.1"
libp2p-tcp = "0.41.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }

# HTML Parsing
scraper = "0.18"

# Testing
mockall = "0.12"
tempfile = "3.8"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"


[patch.crates-io]
# Temporary local patch to test bumping ring via a patched rcgen fork. Remove this after upstream rcgen ships a release that resolves the advisory.
rcgen = { path = "patches/rcgen/rcgen" }
libp2p-tls = { path = "patches/libp2p-tls" }


