[package]
name = "master_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "master_server"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features=["json","rustls-tls","blocking"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
verseguy_storage = { path = "../containers/storage" }
verseguy_auth = { path = "../containers/auth" }
verseguy_licensing = { path = "../containers/licensing" }
hyper = { version = "0.14", features = ["server"] }

# Ed25519 for plugin signing
ed25519-dalek = "1.0"
base64 = "0.21"
rand = "0.7"
clap = { version = "4", features = ["derive"] }

[features]
run-server = []

[dev-dependencies]
tempfile = "3.5"
reqwest = { version = "0.11", features = ["json","rustls-tls"] }
tower = "0.5"
