[package]
name = "verseguy_audit"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
verseguy-storage = { path = "../storage" }
hex = "0.4"

[dev-dependencies]
tempfile = "3.5"
