[package]
name = "verseguy_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.4"
rand = "0.8"
rand_core = "0.6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
verseguy_storage = { path = "../storage" }

[dev-dependencies]
# Use tokio for async tests
tempfile = "3.5"
