[package]
name = "verseguy_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.4"
rand = "0.8"
rand_core = "0.6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
urlencoding = "2.1"
tracing = "0.1"
url = "2"
# OAuth
oauth2 = "4.4"
base64 = "0.21"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
verseguy_storage = { path = "../storage" }

[dev-dependencies]
# Use tokio for async tests
tempfile = "3.5"
mockito = "1.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
verseguy_test_utils = { path = "../../crates/shared/test_utils" }

[features]
# Enable mocked OAuth integration tests
oauth_integration = []
