[package]
name = "verseguy_compliance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
verseguy-storage = { path = "../storage" }
verseguy-auth = { path = "../auth" }

[dev-dependencies]
tempfile = "3.5"
