[package]
name = "verseguy_p2p"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
libp2p = { version = "0.54.1", features = ["tcp", "ping", "identify", "noise", "yamux", "dns"] }
libp2p-mdns = { version = "0.46", features = ["tokio"] }
libp2p-tcp = { version = "0.42", features = ["tokio"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "io-util", "sync"] }
futures = "0.3"