[package]
name = "verseguy-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
uuid = { workspace = true }
once_cell = "1.21"
serde_urlencoded = "0.7"
chrono = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
reqwest = { version = "0.11", features = ["json"] }
