[package]
name = "verseguy-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
uuid = { workspace = true }
once_cell = "1.21"
serde_urlencoded = "0.7"
chrono = { workspace = true }
sled = "0.34"
redis = "1"

# Fleet plugin (local)
plugins-base-fleet = { path = "../../plugins/base/fleet" }
verseguy_storage = { path = "../../containers/storage" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
reqwest = { version = "0.11", features = ["json"] }
serde_yaml = "0.9"

tempfile = "3.5"
