[package]
name = "verseguy-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Minimal dependencies for the integration tests (start small; add more as needed)
verseguy-application = { path = "../application" }

# Testing
tokio = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
