[package]
name = "libp2p-swarm"
edition = "2021"
rust-version = "1.56.1"
description = "The libp2p swarm"
version = "0.47.0-patched"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
lru = "0.16"
either = "1.6.0"
multistream-select = "0.13"
fnv = "1.0"
futures = "0.3.1"
futures-timer = "3.0.2"
instant = "0.1.11"
libp2p-core = { path = "../_libp2p_tmp/core", version = "0.43.2" }
log = "0.4"
pin-project = "1.0.0"
rand = "0.7"
smallvec = "1.6.1"
thiserror = "1.0"
void = "1"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
env_logger = "0.9"
libp2p = { path = "../_libp2p_tmp", default-features = false, features = ["identify", "ping", "plaintext", "yamux"] }
libp2p-mplex = { path = "../_libp2p_tmp/muxers/mplex" }
libp2p-noise = { path = "../_libp2p_tmp/transports/noise" }
libp2p-tcp = { path = "../_libp2p_tmp/transports/tcp" }
quickcheck = "0.9.0"
rand = "0.7.2"

[patch.crates-io]
multistream-select = { path = "../_libp2p_tmp/misc/multistream-select" }

[workspace]
