[package]
name = "libp2p-tls"
version = "0.4.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
libp2p-identity = { version = "0.2", features = ["peerid"] }
rustls = "0.23"
x509-parser = "0.16"
rcgen = { version = "0.11", features = ["crypto"] }
yasna = "0.5"
ed25519-dalek = { workspace = true }
