[package]
name = "verseguy-domain-application"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
verseguy_storage = { path = "../../../containers/storage" }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["test-util", "macros"] }