[package]
name = "verseguy-domain-operations"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
verseguy_storage = { path = "../../../containers/storage" }
chrono = { version = "0.4", features = ["serde"] }
verseguy_storage_infra = { path = "../../../crates/infrastructure/storage" }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["test-util", "macros"] }
