[package]
name = "verseguy_audit_infra"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
verseguy_storage_infra = { path = "../storage" }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
