[package]
name = "verseguy_auth"
version.workspace = true
edition.workspace = true

[dependencies]
# Infrastructure
verseguy-error = { path = "../../shared/error" }
verseguy-telemetry = { path = "../../shared/telemetry" }
verseguy-security = { path = "../security" }
verseguy_storage_infra = { path = "../storage" }

# Cryptography
argon2 = { workspace = true, features = ["std"] }
ed25519-dalek = { workspace = true }
rand = "0.8"

# JWT
jsonwebtoken = "9.2"

[dev-dependencies]
anyhow = "1.0"
mockito = "1.7"

[package.metadata]
# Minimal metadata for enterprise guide
keywords = ["enterprise", "auth", "verseguy"]
