[package]
name = "verseguy_authorization"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = "1.0"
verseguy_storage_infra = { path = "../storage" }

[dev-dependencies]
tempfile = "3.8"
verseguy_licensing_infra = { path = "../licensing" }
