[package]
name = "verseguy_licensing_infra"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = "1.0"
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
verseguy_storage_infra = { path = "../storage" }

[dev-dependencies]
tempfile = "3.8"
