[package]
name = "plugins-adapter-scunpacked"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
verseguy_storage = { path = "../../../containers/storage" }
reqwest = { version = "0.11", features = ["json","rustls-tls","blocking"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.5"
