[package]
name = "plugins-base-fleet"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
verseguy_storage = { path = "../../../containers/storage" }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.5"
verseguy_test_utils = { path = "../../../crates/shared/test_utils" }