[package]
name = "plugins-base-organization"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
verseguy_storage = { path = "../../../containers/storage" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.5"

